force-app/main/default/objects/PaymentSimulation__c/PaymentSimulation__c.object-meta.xml
<CustomObject>
    <label>Simulação de Pagamento</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Número da Simulação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulações de Pagamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>