force-app/main/default/objects/PaymentSimulation__c/fields/FinancingRate__c.field-meta.xml
<CustomField>
    <fullName>FinancingRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taxa de Financiamento</label>
    <referenceTo>FinancingRate__c</referenceTo>
    <relationshipLabel>Simulações de Pagamento</relationshipLabel>
    <relationshipName>PaymentSimulationsByRate</relationshipName>
    <type>Lookup</type>
</CustomField>