force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentAmount1__c.field-meta.xml
<CustomField>
    <fullName>InstallmentAmount1__c</fullName>
    <label>Valor da Parcela 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>