force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentAmount2__c.field-meta.xml
<CustomField>
    <fullName>InstallmentAmount2__c</fullName>
    <label>Valor da Parcela 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>