force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentAmount3__c.field-meta.xml
<CustomField>
    <fullName>InstallmentAmount3__c</fullName>
    <label>Valor da Parcela 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>