force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentCount__c.field-meta.xml
<CustomField>
    <fullName>InstallmentCount__c</fullName>
    <label>Quantidade de Parcelas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>