force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentRate1__c.field-meta.xml
<CustomField>
    <fullName>InstallmentRate1__c</fullName>
    <label>Taxa da Parcela 1</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>