force-app/main/default/objects/PaymentSimulation__c/fields/InstallmentRate2__c.field-meta.xml
<CustomField>
    <fullName>InstallmentRate2__c</fullName>
    <label>Taxa da Parcela 2</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>