force-app/main/default/objects/PaymentSimulation__c/fields/Installments2__c.field-meta.xml
<CustomField>
    <fullName>Installments2__c</fullName>
    <label>Opção de Parcela 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>