force-app/main/default/objects/PaymentSimulation__c/fields/Installments4__c.field-meta.xml
<CustomField>
    <fullName>Installments4__c</fullName>
    <label>Opção de Parcela 4</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>