force-app/main/default/objects/PaymentSimulation__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>Taxa de Juros</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>