force-app/main/default/objects/PaymentSimulation__c/fields/ProposalLabel__c.field-meta.xml
<CustomField>
    <fullName>ProposalLabel__c</fullName>
    <label>Rótulo da Proposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>