force-app/main/default/objects/PaymentSimulation__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simulação Selecionada</label>
    <type>Checkbox</type>
</CustomField>