force-app/main/default/objects/PaymentSimulation__c/fields/SelectedInstallmentOption__c.field-meta.xml
<CustomField>
    <fullName>SelectedInstallmentOption__c</fullName>
    <label>Qtde de Parcela Escolhida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opção de Parcela 1</fullName>
            </value>
            <value>
                <fullName>Opção de Parcela 2</fullName>
            </value>
            <value>
                <fullName>Opção de Parcela 3</fullName>
            </value>
            <value>
                <fullName>Opção de Parcela 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>